RESOLVED FIXED181532
[WPE] Two clearkey tests failing since r226621
https://bugs.webkit.org/show_bug.cgi?id=181532
Summary [WPE] Two clearkey tests failing since r226621
Miguel Gomez
Reported 2018-01-11 06:28:13 PST
imported/w3c/web-platform-tests/encrypted-media/clearkey-mp4-unique-origin.html [ Failure ] imported/w3c/web-platform-tests/encrypted-media/clearkey-generate-request-disallowed-input.html [ Timeout ] both failing since r226621
Attachments
Patch (4.98 KB, patch)
2018-01-15 05:56 PST, Yacine Bandou
no flags
Patch (4.98 KB, patch)
2018-01-15 06:07 PST, Yacine Bandou
no flags
Yacine Bandou
Comment 1 2018-01-15 02:03:54 PST
(In reply to Miguel Gomez from comment #0) > imported/w3c/web-platform-tests/encrypted-media/clearkey-mp4-unique-origin. > html [ Failure ] > imported/w3c/web-platform-tests/encrypted-media/clearkey-generate-request- > disallowed-input.html [ Timeout ] > > both failing since r226621 I am working to understand this bug
Yacine Bandou
Comment 2 2018-01-15 03:51:36 PST
(In reply to Miguel Gomez from comment #0) > imported/w3c/web-platform-tests/encrypted-media/clearkey-mp4-unique-origin. > html [ Failure ] > imported/w3c/web-platform-tests/encrypted-media/clearkey-generate-request- > disallowed-input.html [ Timeout ] > > both failing since r226621 For clearkey-mp4-unique-origin : -Before the r226621 we don't support InitDataType "cenc" in ClearKey so we expect this result : 'FAIL Unique origin is unable to create MediaKeys promise_test: Unhandled rejection with value: object "NotSupportedError: The operation is not supported.' -Since r226621 we support 'cenc' initData ClearKey so we have this result: 'FAIL Unique origin is unable to create MediaKeys assert_equals: expected "failed" but got "allowed" ' The test always fail but with an other message. I'll update the expected result. For clearkey-generate-request-disallowed-input : Since r226621 we support "cenc" initData in ClearKey so we have two problems: 1/ The expected result is changed. 2/ The subtest "initData longer than 64Kb characters" go in timeout because we don't check the PSSH size of the "cenc" initData in r226621. I'll update the expected result, and I'll submit a fix for the timeout.
Yacine Bandou
Comment 3 2018-01-15 05:56:23 PST
EWS Watchlist
Comment 4 2018-01-15 05:58:50 PST
Attachment 331332 [details] did not pass style-queue: ERROR: Source/WebCore/platform/encryptedmedia/clearkey/CDMClearKey.cpp:191: Missing space before ( in if( [whitespace/parens] [5] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Yacine Bandou
Comment 5 2018-01-15 06:07:10 PST
Xabier Rodríguez Calvar
Comment 6 2018-01-16 00:09:35 PST
Comment on attachment 331333 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=331333&action=review > Source/WebCore/ChangeLog:8 > + Whith a fake initData, we can have a pssh size nul, thus we should check it. With? > Source/WebCore/platform/encryptedmedia/clearkey/CDMClearKey.cpp:190 > + // Check the pssh size Period at the end.
WebKit Commit Bot
Comment 7 2018-01-16 00:13:09 PST
Comment on attachment 331333 [details] Patch Clearing flags on attachment: 331333 Committed r226965: <https://trac.webkit.org/changeset/226965>
WebKit Commit Bot
Comment 8 2018-01-16 00:13:11 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.