[WPE] Two clearkey tests failing since r226621 https://bugs.webkit.org/show_bug.cgi?id=181532

Patch by Yacine Bandou <yacine.bandou_ext@softathome.com> on 2018-01-16
Reviewed by Xabier Rodriguez-Calvar.

Source/WebCore:

Whith a fake initData, we can have a pssh size nul, thus we should check it.
We saw this issue in the subtest "initData longer than 64Kb characters" in
the clearkey-generate-request-disallowed-input layout test.

* platform/encryptedmedia/clearkey/CDMClearKey.cpp:
(WebCore::extractKeyidsLocationFromCencInitData):

LayoutTests:

* platform/wpe/imported/w3c/web-platform-tests/encrypted-media/clearkey-generate-request-disallowed-input-expected.txt:
* platform/wpe/imported/w3c/web-platform-tests/encrypted-media/clearkey-mp4-unique-origin-expected.txt:
    Since r226621 initDataType "cenc" is supported in clearKey, so we should update the expected result of these tests.

Canonical link: https://commits.webkit.org/197517@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226965 268f45cc-cd09-0410-ab3c-d52691b4dbfc